# CSD_24-25

./: .gitignore  CMakeLists.txt  Findliblo.cmake  README.md
blok2a/: readme.md
blok2a/assignment_3/sample_player/: 01_playASound.py  02_timedPlayback.py  03_randomTime.py  04_randomNoteDuration.py  05_oneSampleSequenceSteps.py  06_oneSampleSequenceTime.py
blok2a/session1/: 1_hello.py  1_hello_name.py  1_optional_loop_etudes.py
blok2a/session2/: 1_delay_print.py  2_play_sample.py  3_repeat_sample.py  4_list.py  5_delay_player.py
blok2a/session3/: 3_seq_input.txt  3a_exercise2.py  3a_exercise2_final.py  3b_time_test.py  3c_exercise2_deviation.py  3d_timestamps.py  3d_timestamps_final.py  session_3.md
blok2a/session3/blueprint/: 3a_exercise2.py  3d_timestamps.py
blok2a/session4/: 4a_exercise3.py  4b_dictonary.py  4c_event_handling_final.py  4d_dictionary_sorting_function.py  4e_dictionary_generation_function.py  4f_userinput.py  README.md
blok2a/session5/: 6_midpoint_displacement.py
blok2a/session5/MIDI/: duration_lists_to_midi.py  event_lists_to_midi.py  melody_to_midifile.py  user_note_to_midifile.py
blok2a/session5/rhythms/: euclidean1_norotation.py  euclidean2_rotation.py  fill_rhythm.py
blok2a/session7/: checklist.md  snippet_allocation.py  snippet_comments.py  snippet_simplify.py
blok2b/: CMakeLists.txt  install_compiler.md  windows.md
blok2b/extra/01_pointers/: 01_pointers.cpp  03_array.cpp  (+4 more)
blok2b/session1/: assignments.md  session.md
blok2b/session2/: assignments.md  session.md
blok2b/session3/: CMakeLists.txt  assignments.md  overview.md  plotSine.R
blok2b/session3/03_soundingSine/: CMakeLists.txt  customCallback.h  info.md  main.cpp  sine.cpp  sine.h
blok2b/session4/: CMakeLists.txt  assignments.md  overview.md
blok2b/session4/01_override/: CMakeLists.txt  Makefile  main.cpp  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp
blok2b/session4/02_override_callFromBase/: CMakeLists.txt  Makefile  main.cpp  oscillator.cpp  sine.cpp  sine.h
blok2b/session4/03_override_callFromBase/: CMakeLists.txt  main.cpp  oscillator.h  sine.cpp
blok2b/session4/03_sineSquareSaw/: CMakeLists.txt  audioToFile.cpp  audioToFile.h  audiocomponent.h  callback.cpp  callback.h  main.cpp  oscillator.cpp  oscillator.h  plot.py  sine.cpp  sine.h  square.cpp  square.h
blok2b/session4/04_sineSquareSaw/: CMakeLists.txt  Makefile  audioToFile.cpp  callback.cpp  callback.h  main.cpp  notes.md  oscillator.cpp  oscillator.h  sine.h  square.h
blok2b/session4/04_sineSquareSaw_Final/: CMakeLists.txt  audioToFile.cpp  audiocomponent.h  callback.h  main.cpp  notes.md  oscillator.cpp  oscillator.h  sine.cpp  sine.h  square.cpp  square.h
blok2b/session4/prep/04_sineSquareSaw/: CMakeLists.txt  audioToFile.cpp  audioToFile.h  callback.cpp  callback.h  main.cpp  oscillator.cpp  square.h
blok2b/session5/: CMakeLists.txt  assignments.md  overview.md
blok2b/session5/01_melody/: CMakeLists.txt  audiocomponent.h  callback.cpp  callback.h  jack_module.h  main.cpp  melody.cpp  melody.h  melody_test.cpp  square.cpp  square.h
blok2b/session6/: CleanYourRepo.md
blok2c/: CMakeLists.txt  assignment_session2.md
blok2c/assignments/: assignment_session1.md  assignment_session3.md
blok2c/codeclinics/: CMakeLists.txt
blok2c/codeclinics/cc1/01_circularBuffer/: .gitignore  CMakeLists.txt  circBuffer.cpp  circBuffer.h  main.cpp
blok2c/codeclinics/cc1/prep/00_circBufferSession/: CMakeLists.txt  circBuffer.cpp  main.cpp
blok2c/codeclinics/cc3/01_Stereo/: CMakeLists.txt  audiocomponent.h  main.cpp
blok2c/codeclinics/cc4/: CMakeLists.txt  Filters.h  audiocomponent.h  deltasequence.h  main.cpp
blok2c/sharedCode/: CMakeLists.txt
blok2c/sharedCode/audio/: CMakeLists.txt  audioToFile.cpp  audioToFile.h  audiocomponent.h  bufferDebugger.cpp  bufferDebugger.h  jack_module.h  module.mk
blok2c/theorie/: CMakeLists.txt
blok2c/theorie/session1/02_tremolo/: CMakeLists.txt  Makefile  callback.cpp  callback.h  main.cpp  tremolo.cpp  tremolo.h
blok2c/theorie/session1/03_tremeloProcessBuffer/: CMakeLists.txt  Makefile  callback.cpp  callback.h  main.cpp  tremolo.cpp  tremolo.h
blok2c/theorie/session1/prep/01_tremoloSession/: CMakeLists.txt  Makefile  callback.cpp  callback.h  main.cpp  tremolo.cpp  tremolo.h
blok2c/theorie/session2/01_effectSession/: CMakeLists.txt  callback.cpp  callback.h  delay.cpp  delay.h  effect.cpp  effect.h  main.cpp  tremolo.cpp  tremolo.h
blok2c/theorie/session2/02_effect/: CMakeLists.txt  callback.cpp  callback.h  delay.cpp  delay.h  effect.cpp  effect.h  tremolo.cpp  tremolo.h
blok2c/theorie/session3/01_waveGenerator/: CMakeLists.txt  main.cpp  plot.py  wavetableGenerator.cpp  wavetableGenerator.h
blok2c/theorie/session3/prep/: CMakeLists.txt  callback.cpp  callback.h  effect.h  waveShaper.cpp  waveShaper.h  wavetableGenerator.cpp  wavetableGenerator.h
blok2c/theorie/session4/: CMakeLists.txt  Session_overview.md
blok2c/theorie/session4/00_opencv_test/: CMakeLists.txt  Makefile  main.cpp
blok2c/theorie/session4/1_basic_buffer_BW/: CMakeLists.txt  main.cpp
blok2c/theorie/session4/2_basic_buffer_color/: CMakeLists.txt  main.cpp
blok2c/theorie/session4/3_basic_image_IO/: CMakeLists.txt  main.cpp
blok2c/theorie/session4/4_basic_image_filter/: CMakeLists.txt  main.cpp
blok2c/theorie/session4/5_basic_image_binary/: CMakeLists.txt  Makefile  main.cpp
blok2c/theorie/session4/6_basic_background_subtraction/: BGModelCreator.cpp  BGModelCreator.h  CMakeLists.txt  Makefile  bgSubtractor.cpp  bgSubtractor.h  bgSubtractorAverage.cpp  bgSubtractorAverage.h  bgSubtractorSD.cpp  bgSubtractorSD.h  main.cpp
blok2c/theorie/session4/7_AR_checkerboard/: CMakeLists.txt  Makefile  axes.cpp  axes.h  cameraCalibrator.cpp  cameraCalibrator.h  cube.cpp  cube.h  drawObject.cpp  drawObject.h  intrinsics.XML  main.cpp
blok2c/theorie/session5/01_osc/: CMakeLists.txt  Makefile  README.md  osc.cpp  osc.h
blok2c/theorie/session6/: CMakeLists.txt  callback.cpp  callback.h  customJuceOSC.cpp  customJuceOSC.h  main.cpp  osc_server.h
blok2d/: assignment1.md
(+230 files in other folders)
